add ui prototype
